# aiTerminal

./: .gitignore  Cargo.toml  LICENSE  README.md  index.html
.github/workflows/: ci.yml
builtin/: config.toml
builtin/ai/: aiTerminal.md
builtin/ai/agents/: ai.md  coder.md  explorer.md  reviewer.md  tester.md
builtin/ai/flows/: implement.toml  review.toml
builtin/ai/models/: anthropic.toml  deepseek.toml  grok.toml  groq.toml  kimi.toml  lmstudio.toml  local.toml  minimax.toml  ollama.toml  openai.toml  openrouter.toml  qwen.toml
builtin/ai/prompts/: concise.md  explain.md  tdd.md
builtin/ai/skills/: code-review.md  concise.md  debugging.md  git.md  orchestration.md  refactoring.md  security-review.md  testing.md
builtin/i18n/: en.toml  fr.toml
builtin/keymaps/: default.toml
builtin/themes/: alpine.toml  coral.toml  cosmic-orange.toml  deep-purple.toml  gold.toml  graphite.toml  lavender.toml  light-gold.toml  midnight.toml  mist-blue.toml  nebula.toml  pink.toml  product-red.toml  sage.toml  sky-blue.toml  solar-flare.toml  starlight.toml  sunset.toml  titanium.toml
crates/app/: Cargo.toml
crates/app/src/: main.rs
crates/corelib/: Cargo.toml
crates/corelib/src/: brand.rs  lib.rs
crates/corelib/src/codec/: mod.rs
crates/corelib/src/datetime/: mod.rs
crates/corelib/src/design/: mod.rs
crates/corelib/src/gfx/: blend.rs  mod.rs  png.rs  text.rs
crates/corelib/src/theme/: load.rs  mod.rs  palette.rs
crates/corelib/src/types/: chord.rs  color.rs  config.rs  event.rs  fs.rs  geom.rs  image.rs  input.rs  mod.rs  surface.rs  text.rs
crates/corelib/src/unicode/: mod.rs
crates/corelib/src/wire/: frontmatter.rs  json.rs  mod.rs  toml.rs
crates/framework/: Cargo.toml
crates/framework/src/: cli.rs  lib.rs  procio.rs  render.rs  test_home.rs
crates/framework/src/ai/: agent.rs  client.rs  context.rs  defs.rs  diff.rs  mcp.rs  mod.rs  model.rs  orchestrate.rs  pool.rs  request.rs  setup.rs  stream.rs  tools.rs
crates/framework/src/ai/memory/: mod.rs  retrieve.rs
crates/framework/src/ai/provider/: anthropic.rs  mod.rs  openai.rs
crates/framework/src/caps/: backends.rs  clip.rs  codec.rs  data.rs  diag.rs  files.rs  git.rs  host.rs  http.rs  memory.rs  mod.rs  net.rs  object.rs  queue.rs  task.rs  tests.rs  time.rs  todo.rs
crates/framework/src/config/: mod.rs
crates/framework/src/gui/: action.rs  boot.rs  focus.rs  frame.rs  handlers.rs  input.rs  link.rs  mod.rs  mouse.rs  panes.rs  persist.rs  render.rs  setup.rs  switcher.rs  termlink.rs  workspace.rs
crates/framework/src/i18n/: mod.rs
crates/framework/src/keymap/: mod.rs
crates/framework/src/plugin/: eval.rs  mod.rs  store.rs  tests.rs
crates/framework/src/profile/: mod.rs
crates/framework/src/security/: mod.rs  regex.rs
crates/framework/src/shell/: mod.rs
crates/framework/src/theme/: mod.rs
crates/platform/: Cargo.toml  build.rs
crates/platform/src/: lib.rs
crates/platform/src/log/: mod.rs
crates/platform/src/orchestrator/: mod.rs
crates/platform/src/os/: mod.rs
crates/platform/src/os/macos/: cf.rs  clipboard.rs  coretext.rs  fs.rs  image.rs  metal.rs  mod.rs  objc.rs  proc.rs  pty.rs  window.rs
crates/platform/src/term/: cell.rs  mod.rs  parser.rs  selection.rs
crates/platform/src/testkit/: mod.rs  ppm.rs
crates/platform/src/traits/: image.rs  mod.rs
crates/platform/src/transport/: mod.rs
docs/: README.md  ai.md  architecture.md  configuration.md  features.md  getting-started.md  keybindings.md  logging.md  packaging.md  plugins.md  security.md  shell.md  theme.md
examples/: README.md
examples/ai/: agent.md  flow.toml  loop.md
examples/config/: keymap.toml  locale.toml  profile.toml  theme.toml
examples/plugin/: plugin.toml  shell.zsh
packaging/: Info.plist
tools/: bundle-macos.sh  check_layers.sh  check_no_crates.sh  check_unsafe.sh
website/: docs.html  index.html  use-cases.html  video.html
website/css/: main.css  site.css
website/js/: main.js  plugins.js  replica.js  showcase.js  themes.js
(+81 files in other folders)
